...

                <TextView
                    android:id="@+id/titleYearTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/yearTitle"
                    android:textColor="@color/titles_analysis"
                    android:textSize="30sp" />

                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/totalText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginRight="10dp"
                        android:text="@string/total"
                        android:textSize="20sp" />

...

                <TextView
                    android:id="@+id/textTotalExpenseYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/titleLineChartYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/year"
                    android:textColor="@color/titles_analysis"
                    android:textSize="30dp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineYearChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
...

                <TextView
                    android:id="@+id/xAxisTitleYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/months"
                    android:textSize="24dp" />
            </LinearLayout>
...

                <TextView
                    android:id="@+id/titleTypeChartYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/typeChartTitle"
                    android:textSize="30dp"
                    android:layout_marginTop="10dp"
...

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/expensesYearTypeChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
...

                                <ImageView
                                    android:id="@+id/supermarketYearLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/transportYearLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/leisureYearLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <TextView
                                    android:id="@+id/YearExpenseSupermarket"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/YearExpenseTransport"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/YearExpenseLeisure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/shoppingYearLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/billsYearLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <ImageView
                                    android:id="@+id/otherYearLegend"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
...

                                <TextView
                                    android:id="@+id/YearExpenseShopping"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/YearExpenseBills"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <TextView
                                    android:id="@+id/YearExpenseOther"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/titlePaymentChartYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/paymentChartTitle"
                    android:textSize="30dp"
                    android:layout_marginTop="10dp"
...

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/expensesYearPaymentChart"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
...

                            <ImageView
                                android:id="@+id/cashYearLegend"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
...

                            <TextView
                                android:id="@+id/YearExpenseCash"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

                            <ImageView
                                android:id="@+id/cardYearLegend"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
...

                            <TextView
                                android:id="@+id/YearExpenseCard"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...
